[package]
name = "rust-cell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# add feature web-sys console
[features]
default = ["web-sys"]
web-sys = ["web-sys/console"]

[dependencies]
wasm-bindgen = "0.2.74"
web-sys = "0.3"
js-sys = "0.3"
