[package]
name = "rust-cell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
web-sys = { version = "0.3",features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d"
]}
js-sys = "0.3"
rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }
