[package]
name = "rust-cell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
web-sys = { version = "0.3",features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Performance",
]}
js-sys = "0.3"
browser = { path = "./packages/browser"}
game = { path = "./packages/game"}
console_error_panic_hook = "0.1.0"

